# chip8

./: .clang-format  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build_test.yml
cmake/: optimizations.cmake  warnings.cmake
emulator/include/: emulator.h  font.h  platform.h  types.h
emulator/src/: CMakeLists.txt  emulator.cpp  main.cpp  platform.cpp
test/: CMakeLists.txt  test.cpp  test.rom
